--- a/webapp/css/custom.css
+++ b/webapp/css/custom.css
@@ -5,3 +5,32 @@
 .center {
 	margin: 0 auto;
 }
+
+/*VIZ DIV*/
+.viz > div {
+	min-height:500px;
+}
+
+/*NOTE*/
+.draggable, .ui-draggable {
+	width:300px;
+}
+
+
+.note {
+	-webkit-box-shadow: 0px 2px 6px 4px rgba(0,0,0,0.17);
+	-moz-box-shadow: 0px 2px 6px 4px rgba(0,0,0,0.17);
+	box-shadow: 0px 2px 6px 4px rgba(0,0,0,0.17);
+	padding:15px;
+	font-size:10px;
+	position:absolute;
+}
+
+.biblio {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #999;
+}
+.ui-tooltip-content {
+	text-align:left;
+}
