--- a/webapp/css/custom.css
+++ b/webapp/css/custom.css
@@ -30,6 +30,7 @@
     text-transform: uppercase;
     font-weight: bold;
     color: #999;
+	font-size: 9px;
 }
 .ui-tooltip-content {
 	text-align:left;
